--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/asjohnson8735/lampshade-tubular#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "handlebars": "^4.7.7",
+    "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
     "sequelize": "^6.31.1"
   }
