--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
