--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/asjohnson8735/Touristy.git"
+    "url": "git+https://github.com/lkrum/Touristy.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/asjohnson8735/lampshade-tubular/issues"
+    "url": "https://github.com/lkrum/Touristy/issues"
   },
-  "homepage": "https://github.com/asjohnson8735/lampshade-tubular#readme",
+  "homepage": "https://github.com/lkrum/Touristy#readme",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.15.1",
     "bcryptjs": "^2.4.3",
@@ -30,6 +30,7 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
+    "mdb-ui-kit": "^6.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
     "sequelize": "^6.31.1"
